2.0.0 scrollbar fix and new themes

--- a/DuckDuckGoDeepDark.user.css
+++ b/DuckDuckGoDeepDark.user.css
@@ -2,7 +2,7 @@
 @name DuckDuckGo DeepDark
 @namespace github.com/RaitaroH/DuckDuckGo-DeepDark
 @homepageURL https://github.com/RaitaroH/DuckDuckGo-DeepDark
-@version 1.9.9
+@version 2.0.0
 @updateURL https://github.com/RaitaroH/DuckDuckGo-DeepDark/raw/master/DuckDuckGoDeepDark.user.css
 @description Light will blind you in your search for answers, dark will make them shine. May the dark be kinder on thine eyes. (DuckDuckGo dark theme)
 @author RaitaroH
@@ -17,6 +17,7 @@
 	"HavocOS",
 	"Arc-Dark",
 	"Vertex-Dark",
+	"Dracula",
 	"Mint-Y-Dark",
 	"Adapta-Nokto",
 	"Adapta-Breath-Nokto",
@@ -29,6 +30,8 @@
 	"9anime",
 	"Firefox-Dark",
 	"Firefox-57",
+	"Firefox-Dark-91",
+	"Firefox-Alpenglow-Dark",
 	"Discord",
 	"YouTube-Dark",
 	"Black-and-White",
@@ -40,6 +43,7 @@
 	"Jisho",
 	"Custom"
 ]
+@var text scrollbar_width "Scrollbar width" 8px
 
 @var color mainColor "Custom main color" "#367bf0"
 @var color mainBackground "Custom main background" "#22242d"
@@ -105,6 +109,15 @@
 			--dimmer-text: #b3bac5;
 			--shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
 		}
+		else if stylus-deepdark-style == "Dracula" {
+			--main-color: #bd93f9;                      /*Purple*/
+			--main-background: hsl(231, 15%, 18%);      /*Background*/
+			--second-background: hsl(231, 15%, 22%);    /*Manually generated from Background*/
+			--hover-background: #44475a;                /*Selection*/
+			--main-text:#f8f8f2;                        /*Foreground*/
+			--dimmer-text: #bcc2cd;                     /*From .app-title https://draculatheme.com/*/
+			--shadow: 0 1px 0.5px rgba(0, 0, 0, .15);
+		}
 		else if stylus-deepdark-style == "Firefox-Dark" {
 			--main-color: #5675b9;
 			--main-background: #272b35;
@@ -122,6 +135,24 @@
 			--main-text: #f9f9fa;
 			--dimmer-text: #d0d0d0;
 			--shadow: 0 1px 0.5px rgba(54, 54, 54, .2);
+		}
+		else if stylus-deepdark-style == "Firefox-Dark-91" {
+			--main-color: #00ddff;
+			--main-background: #1c1b22;
+			--second-background: #23222b;
+			--hover-background: #2b2a33;
+			--main-text: #fbfbfe;
+			--dimmer-text: #b8b7bb;
+			--shadow: 0 1px 0.5px rgba(0, 0, 0, .13);
+		}
+		else if stylus-deepdark-style == "Firefox-Alpenglow-Dark" {
+			--main-color: #C488FC;
+			--main-background: #21133d;
+			--second-background: #2a1e52;
+			--hover-background: #2d245b;
+			--main-text: #ffffff;
+			--dimmer-text: #E3DBFA;
+			--shadow: 0 1px .5px rgba(35, 22, 65, .5);
 		}
 		else if stylus-deepdark-style ==  "Discord" {
 			--main-color: #7289da;
@@ -312,6 +343,27 @@
 			--dimmer-text: dimmerText;
 			--shadow: 0 1px 0.5px colorShadow;
 		}
+	}
+	*
+	{
+		scrollbar-color: var(--main-color) var(--main-background) !important;
+		scrollbar-width: thin !important;
+	}
+	/*Scrollbar fix for chrome*/
+	*:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
+	{
+		background: var(--main-color) !important;
+	}
+	*:not([hide-scrollbar]) ::-webkit-scrollbar
+	{
+		width: scrollbar_width !important;
+	}
+	/*Scrollbar fix for firefox*/
+	::-webkit-scrollbar-track {
+		background: var(--main-background) !important;
+	}
+	::-webkit-scrollbar-thumb {
+		background: var(--main-color) !important;
 	}
 
 	/*Changed text highlight*/
